--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/** @format */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +12,39 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+nav {
+  padding: 0 1.5rem;
+}
+
+nav ul a {
+  padding: 0;
+  border-radius: 50%;
+  opacity: 0.9s
+}
+nav ul a:hover {
+  opacity: 1
+}
+
+.content {
+  min-height: calc(100vh - 70px - 64px);
+}
+
+.movies{
+  display:grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap:0.5rem
+}
+
+.search-btn{
+  position: absolute;
+  top: 0;
+  right: 0.5rem;
+}
+
+.radio-filter{
+  display: grid;
+  grid-template-columns: 0.33fr 0.33fr 0.33fr;
+  justify-items: center;
 }
